<resources>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="app_name">Asistente de Profesores</string>
    <string name="hamburger_icon">hamburger icon</string>
    <string name="welcome">Bienvenido</string>
    <string name="grupos">Grupos</string>
    <string name="user_name">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="forgot_pass">Olvidé mi contraseña</string>
    <string name="login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="your_web_client_id">230093155440-t4hs7tbfc5ci090lu9v4k5att168avpt.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_name">Nombre del grupo</string>
    <string name="matricula">Matrícula</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="name">Nombre y Apellidos</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="logout">Cerrar sesión</string>
    <string name="lunes">Lunes</string>
    <string name="Martes">Martes</string>
    <string name="Miércoles">Miércoles</string>
    <string name="Jueves">Jueves</string>
    <string name="Viernes">Viernes</string>
    <string name="hora">Hora</string>
    <string name="horario">Horario</string>
    <string name="asignatura">Asignatura</string>
    <string name="lugar">Lugar</string>
    <string name="dia_de_la_semana">Día de la semana:</string>
    <string name="hora_inicio">Hora de inicio:</string>
    <string name="hora_fin">Hora de fin:</string>
    <string name="_00_00">00:00</string>
    <string name="_08_00">08:00</string>
    <string name="hora_template">%1$s\n - \n%2$s</string>
    <string name="nueva_clase">nueva clase</string>
    <string name="nuevo_evento">Nuevo Evento</string>
    <string name="nueva_nota">Nueva Nota</string>
    <string name="number">#</string>
    <string name="nota_promedio">Nota Promedio</string>
    <string name="ausencias">% Ausencias</string>
    <string name="ausencia">Ausencias:</string>
    <string name="notas">Notas:</string>
    <string name="home">Home</string>
    <string name="event_title">Nombre del evento</string>
    <string name="event_details">Detalles:</string>
    <string name="prioridad">Prioridad:</string>
    <string name="notificar">Notificar:</string>
    <string name="eliminar_template">Estás seguro de eliminar %1$s?</string>
    <string name="new_notification">Nueva notificación</string>
    <string name="delete">Eliminar</string>
    <string name="titulo">Título</string>
    <string name="crear_grupo">Crear grupo</string>
    <string name="eventos">Eventos</string>
    <string name="asistente">Asistente</string>
    <string name="change_key">Api Key</string>
    <string name="api_key">Api Key</string>
    <string name="api_key_help">Puede solicitar su Api key en \n https://platform.openai.com/account/api-keys</string>
    <string name="message">Message</string>
    <string name="agregar_imagen">agregar imagen</string>
    <string name="send">Enviar</string>
    <string name="warning_edit_group">Editar un grupo causará que se pierda toda la información del grupo actual</string>
    <string name="warning_delete_group">Eliminar un grupo causará que se pierda toda la información del mismo y sus estudiantes</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="start">Iniciar</string>
    <string name="controlpc">Control Pc</string>
</resources>