<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/homeViewPagerFragment"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/openAiFragment"
            android:checkable="true"
            android:icon="@drawable/ic_openai_menu"
            android:title="@string/asistente" />
        <item
            android:id="@+id/controlPc"
            android:checkable="true"
            android:icon="@drawable/bluetooth_icon"
            android:title="@string/controlpc" />
    </group>

</menu>