<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trece"
    tools:context=".ui.view.fragments.FragmentRegisters">
    <LinearLayout
        android:id="@+id/header_registro"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/primero"
        android:orientation="horizontal">
        <TextView
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/white"
            android:text="@string/number"/>
        <TextView
            android:layout_weight="2"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:text="@string/name"
            android:gravity="center_vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"/>
        <TextView
            android:layout_weight="1"
            android:text="@string/nota_promedio"
            android:layout_width="0dp"
            android:paddingStart="5dp"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>
        <TextView
            android:layout_weight="1"
            android:text="@string/ausencias"
            android:layout_width="0dp"
            android:paddingStart="5dp"
            android:gravity="center"
            android:paddingEnd="5dp"
            android:layout_height="match_parent"
            android:textColor="@color/white"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/registro_recycler_view"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="5dp"
        tools:listitem="@layout/item_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>