<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/context_menu_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:backgroundTint="@color/white"
        android:background="@drawable/bubble_background">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="1dp"
            android:id="@+id/bubble_container"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/button0"
                android:textColor="@color/black"
                app:tint="@color/black"
                android:src="@drawable/clean"
                android:background="@drawable/assistance_edit_note_bg"
                android:elevation="2dp"
                android:layout_margin="2dp"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:padding="10dp"/>
            <TextView
                android:id="@+id/button2"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:background="@drawable/assistance_edit_note_bg"
                android:elevation="2dp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/button3"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/assistance_edit_note_bg"
                android:elevation="2dp"
                android:layout_margin="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/button4"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/assistance_edit_note_bg"
                android:elevation="2dp"
                android:layout_margin="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:padding="4dp"/>
            <TextView
                android:id="@+id/button5"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:gravity="center"
                android:background="@drawable/assistance_edit_note_bg"
                android:elevation="2dp"
                android:layout_margin="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textSize="16sp"
                android:padding="4dp"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>