<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:background="@drawable/ask_key_dialog_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/dialog_group_name"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:singleLine="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:importantForAutofill="no"
            android:fontFamily="@font/biotif_regular"
            android:inputType="textPersonName"
            android:hint="@string/group_name"
            android:background="@drawable/edit_openai_dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/openai_key_dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"/>
            <TextView
                android:id="@+id/ok_button"
                android:layout_weight="1"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/openai_key_dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="20dp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
