<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/dialog_inset_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:background="@drawable/round_corner_blank"
        android:orientation="vertical">
        <TextView
            android:text="@string/horario"
            android:gravity="center"
            android:fontFamily="@font/biotif_bold"
            android:textColor="@color/primero"
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/horario_lugar"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:singleLine="true"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/edit_text_bg"
                        android:gravity="center_vertical"
                        android:textSize="16sp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:hint="@string/lugar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:fontFamily="@font/biotif_regular"
                        android:inputType="text" />
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/grupo"
                        android:fontFamily="@font/biotif_regular"
                        android:textCursorDrawable="@drawable/cursor_drawable"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:background="@drawable/edit_text_bg"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:hint="@string/group_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAutofill="no"
                        android:inputType="text" />
                </LinearLayout>
                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                    <FrameLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/segundo"
                        android:background="@drawable/fecha_bg">
                        <Spinner
                            android:id="@+id/horario_spinner"
                            android:backgroundTint="@color/tercero"
                            tools:listitem="@layout/spinner_item"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:dropDownWidth="match_parent"
                            android:dropDownSelector="@color/tercero"
                            android:spinnerMode="dropdown"/>
                    </FrameLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:layout_weight="1"
                        android:layout_marginVertical="5dp"
                        android:fontFamily="@font/biotif_regular"
                        android:layout_marginStart="5dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/hora_inicio"/>
                    <TextView
                        android:layout_weight="1"
                        android:id="@+id/horario_time_start"
                        android:gravity="center"
                        android:text="@string/_00_00"
                        android:layout_marginVertical="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/tercero"
                        android:layout_width="0dp"
                        android:background="@drawable/fecha_bg"
                        android:layout_height="match_parent"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal"
                    android:padding="5dp">
                    <TextView
                        android:layout_weight="1"
                        android:layout_marginVertical="5dp"
                        android:fontFamily="@font/biotif_regular"
                        android:layout_marginStart="5dp"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:text="@string/hora_fin"/>
                    <TextView
                        android:background="@drawable/fecha_bg"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/horario_time_end"
                        android:layout_marginVertical="5dp"
                        android:textColor="@color/tercero"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_00_00"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_weight="2"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <EditText
                    android:id="@+id/horario_asignatura"
                    android:fontFamily="@font/biotif_regular"
                    android:textCursorDrawable="@drawable/cursor_drawable"
                    android:textSize="15sp"
                    android:background="@drawable/edit_text_bg"
                    android:paddingStart="10dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="10dp"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:hint="@string/asignatura"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="text" />
                <ImageView
                    android:id="@+id/color_area"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/horario_color_chooser_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/asignatura" />

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel_button"
                android:fontFamily="@font/biotif_bold"
                android:layout_weight="1"
                android:background="@drawable/round_corner_button_left"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/tercero"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/cancel"/>
            <TextView
                android:id="@+id/ok_button"
                android:fontFamily="@font/biotif_bold"
                android:layout_weight="1"
                android:background="@drawable/round_corner_button_right"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/tercero"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/aceptar"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>