<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_margin="40dp"
        android:paddingTop="45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ask_key_dialog_bg"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/api_key"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:fontFamily="@font/biotif_bold"/>
        <EditText
            android:id="@+id/api_key_edit"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:singleLine="true"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp"
            android:importantForAutofill="no"
            android:fontFamily="@font/biotif_regular"
            android:inputType="text"
            tools:text="kjaldjasldk 23askd "
            android:background="@drawable/edit_openai_dialog_bg"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/api_key_help"
            android:autoLink="web"
            android:lineSpacingExtra="5sp"
            android:textColorLink="@color/primero"
            android:textSize="13sp"
            android:textColor="@color/black"
            android:fontFamily="@font/biotif_regular"/>

        <TextView
            android:id="@+id/guardar"
            android:text="@string/guardar"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/openai_key_dialog_btn"
            android:fontFamily="@font/biotif_medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="20dp"/>
    </LinearLayout>
    <ImageView
        android:src="@drawable/ic_openai_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"/>


</FrameLayout>