<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ask_key_dialog_bg"
        android:orientation="vertical">
        <TextView
            android:id="@+id/dialog_text_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Estás seguro de eliminar el grupo: Grupo1"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/biotif_bold"/>
        <TextView
            android:id="@+id/dialog_subtitle"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/biotif_regular"
            android:text="@string/warning_delete_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/openai_key_dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginVertical="20dp"/>
            <TextView
                android:id="@+id/ok_button"
                android:layout_weight="1"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/openai_key_dialog_btn"
                android:fontFamily="@font/biotif_medium"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginVertical="20dp"/>
        </LinearLayout>

    </LinearLayout>
    <ImageView
        android:background="@drawable/ic_danger"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"/>
</FrameLayout>